# OCHRE

./: .gitignore  .readthedocs.yaml  README.md  calculate electricity price nc.py  calculate electricity price.py  changelog.md  pyproject.toml  setup.py  test.csv
.github/: pull_request_template.md
binder/: environment.yml  requirements.txt
defaults/: HVAC Multispeed Parameters.csv  Variable names and units.csv  ZIP_loads.csv
defaults/ASHP Cooler/: biquadratic_parameters.csv
defaults/ASHP Heater/: biquadratic_parameters.csv
defaults/Air Conditioner/: biquadratic_parameters.csv
defaults/BEopt Files/: test_case_rc_model.properties  test_case_schedule.properties
defaults/Battery/: default_parameters.csv
defaults/EV/: pdf_Veh1_Level0.csv
defaults/Envelope/: Envelope Boundaries.csv  Envelope Boundary Types.csv  Envelope Materials.csv
defaults/Gas Generator/: efficiency_curve2.csv
defaults/HVAC Cooling/: Biquadratic Room AC.csv
defaults/Input Files/: sample_resstock_properties.json  sample_resstock_properties.xml  sample_resstock_schedule.csv
defaults/MSHP Cooler/: biquadratic_parameters.csv
defaults/MSHP Heater/: biquadratic_parameters.csv
defaults/OSW Templates/: walls_R7.osw
defaults/Other/: widget_schedule.csv
defaults/PV/: sam_weather_header.csv
defaults/Room AC/: biquadratic_parameters.csv
defaults/Water Draw Profiles/: DHW_1bed_unit0_1min.csv  DHW_1bed_unit1_1min.csv  DHW_1bed_unit2_1min.csv  DHW_1bed_unit3_1min.csv  DHW_1bed_unit4_1min.csv  DHW_1bed_unit5_1min.csv  DHW_1bed_unit6_1min.csv  DHW_1bed_unit7_1min.csv  DHW_1bed_unit8_1min.csv  DHW_1bed_unit9_1min.csv  DHW_2bed_unit0_1min.csv  DHW_2bed_unit1_1min.csv  DHW_2bed_unit2_1min.csv  DHW_2bed_unit3_1min.csv  DHW_2bed_unit4_1min.csv  DHW_2bed_unit5_1min.csv  DHW_2bed_unit6_1min.csv  DHW_2bed_unit7_1min.csv  DHW_2bed_unit8_1min.csv  DHW_2bed_unit9_1min.csv  DHW_3bed_unit0_1min.csv  DHW_3bed_unit1_1min.csv  DHW_3bed_unit2_1min.csv  DHW_3bed_unit3_1min.csv  DHW_3bed_unit4_1min.csv  DHW_3bed_unit5_1min.csv  DHW_3bed_unit6_1min.csv  DHW_3bed_unit7_1min.csv  DHW_3bed_unit8_1min.csv  DHW_3bed_unit9_1min.csv  DHW_4bed_unit0_1min.csv  DHW_4bed_unit1_1min.csv  DHW_4bed_unit2_1min.csv  DHW_4bed_unit3_1min.csv  DHW_4bed_unit4_1min.csv  DHW_4bed_unit5_1min.csv  DHW_4bed_unit6_1min.csv  DHW_4bed_unit7_1min.csv  DHW_4bed_unit8_1min.csv  DHW_4bed_unit9_1min.csv  (+10 more)
defaults/Weather/: CO_FORT-COLLINS-LOVELAND-AP_724769S_18.epw  FortCollins_NSRDB.csv  sample_SAM_weather.csv
docs/: conf.py  requirements.txt
docs/source/: ControllerIntegration.rst  InputsAndArguments.rst  Introduction.rst  ModelingApproach.rst  Modeling_Approach.rst  Outputs.rst  conf.py  generate_hpxml.rst  index.rst  input_arguments.rst  intro.rst  modeling.rst
notebook/: envelope_analysis.ipynb  user_tutorial.ipynb
ochre/: Analysis.py  CreateFigures.py  Dwelling.py  FileIO.py  Psychrometrics_HVAC.py  Simulator.py  Units.py  __init__.py  cli.py  gui.py
ochre/Equipment/: Battery.py  EV.py  Equipment.py  EventBasedLoad.py  Generator.py  HVAC.py  PV.py  ScheduledLoad.py  ThermostaticLoad.py  WaterHeater.py  WetAppliance.py  __init__.py
ochre/Models/: Envelope.py  Humidity.py  RCModel.py  StateSpaceModel.py  Water-PCM.py  Water.py  WaterPCM.py  __init__.py  cp_h-T_data.csv  cp_h-T_data_52_6C.csv  cp_h-T_data_shifted_125F.csv
ochre/defaults/: ASHRAE152_climate_data.csv  ASHRAE152_zone_temperatures.csv  Default Schedule Parameters.csv  HVAC Multispeed Parameters.csv  OCHRE.csv  OCHRE.json  OCHRE_hourly.csv  OCHRE_metrics.csv  Simple Schedule Parameters.csv  Variable names and units.csv  ZIP Parameters.csv  comparing er vs outdoor temp.py  graphing results.py  inrush.csv
ochre/defaults/Battery/: degradation_curves.csv
ochre/defaults/Clothes Dryer/: Event Schedules.csv
ochre/defaults/Cooking Range/: Event Schedules.csv  Induction Event Schedules.csv
ochre/defaults/EV/: BEV_level_1.csv  BEV_level_2.csv  PHEV_level_1.csv
ochre/defaults/Envelope/: Envelope Boundaries.csv  Envelope Boundary Types.csv  Envelope Materials.csv
ochre/defaults/Gas Generator/: default_parameters.csv  efficiency_curve.csv
ochre/defaults/HVAC Cooling/: Biquadratic ASHP Cooler.csv  Biquadratic Air Conditioner.csv  Biquadratic MSHP Cooler.csv
ochre/defaults/HVAC Heating/: Biquadratic ASHP Heater.csv  Biquadratic MSHP Heater.csv
ochre/defaults/Input Files/: BEopt_example.xml  Denver_example.csv  Denver_example.xml  Denver_example_more_heating.xml  HighUseL.csv  LowUseL.csv  MediumUseL.csv  OCHRE with Controller.csv  OCHRE with Controller.json  OCHRE.csv  (+23 more)
ochre/utils/: __init__.py  base.py  envelope.py  equipment.py  hpxml.py  schedule.py  units.py
test/: __init__.py
test/test_dwelling/: run_dwelling_timing.py  test_dwelling.py  test_fileio.py  test_psychrometrics.py
test/test_equipment/: __init__.py  test_battery.py  test_equipment.py  test_ev.py  test_eventbased.py  test_generator.py  test_hvac.py  test_pv.py  test_scheduled.py  test_waterheater.py  test_wetappliance.py
test/test_main/: test_simulator.py
test/test_models/: test_envelope.py  test_humidity.py  test_rcmodel.py  test_statespacemodel.py  test_water.py
test/test_utils/: test_base.py
validate/: compare_eplus.py  get_resstock_properties.py  metrics_criteria.csv  run_ashrae140.py  run_minimal_beopt.py  run_minimal_osw.py  utils.py
(+8 files in other folders)
