[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ochre-nrel"
dynamic = ["version"]
dependencies = [
    "numpy ~= 1.26",
    "pandas ~=2.2",
    "scipy ~= 1.12",
    "matplotlib >= 3.9",
    "pint >= 0.23",
    "pvlib ~= 0.10.5",
    "nrel-pysam ~= 5.1",
    "psychrolib ~= 2.5",
    "numba >= 0.59",  # required for psychrolib
    "xmltodict ~= 0.13.0",
    "pyarrow ~= 15.0",
    "fastparquet ~= 2024.2",
    "rainflow ~= 3.2",
    "pytz ~= 2024.1",
    "python-dateutil ~= 2.9",
    "click ~= 8.1",
    "boto3 ~= 1.35",
]
requires-python = ">=3.9"
authors = [
  { name="Jeff Maguire", email="Jeff.Maguire@nrel.gov" },
  { name="Michael Blonsky", email="Michael.Blonsky@nrel.gov" },
]
description = "An energy modeling tool designed to model residential end-use loads and DERs"
readme = "README.md"
keywords = [
    "building energy modeling",
    "demand flexibility",
    "residential buildings",
    "grid-interactive buildings",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://www.nrel.gov/grid/ochre.html"
Documentation = "https://ochre-nrel.readthedocs.io/en/latest/"
Tutorial = "https://colab.research.google.com/github/NREL/OCHRE/blob/main/notebook/user_tutorial.ipynb"
Repository = "https://github.com/NREL/OCHRE.git"
Issues = "https://github.com/NREL/OCHRE/issues"
Changelog = "https://github.com/NREL/OCHRE/blob/main/changelog.md"

[project.scripts]
ochre = "ochre:cli"
ochre-gui-basic = "ochre:gui_basic"
ochre-gui-detailed = "ochre:gui_detailed"

[tool.hatch.version]
path = "ochre/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ochre"]
